# hey-cleber

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  devenv.nix  flake.nix  hey-cleber-setup.sh  hey-cleber.py  pyproject.toml  shell.nix
.github/workflows/: ci.yml
hey_cleber/: __init__.py  __main__.py  audio.py  config.py  gateway.py  keywords.py  transcription.py  tts.py  vad.py
hey_clever/: __init__.py  __main__.py  audio.py  config.py  gateway.py  keywords.py  transcription.py  tts.py  vad.py
hey_clever/adapters/: __init__.py  beep_sound_cues.py  clawdbot_gateway.py  edge_tts_adapter.py  keyword_adapter.py  sounddevice_input.py  whisper_transcription.py
hey_clever/config/: __init__.py  logging_config.py  settings.py
hey_clever/domain/: __init__.py  audio_buffer.py  detector_state.py  vad.py  voice_detector.py
hey_clever/ports/: __init__.py  audio_input.py  gateway.py  keyword_detection.py  sound_cues.py  transcription.py  tts.py
tests/: test_audio.py  test_audio_buffer.py  test_config.py  test_detector_state.py  test_gateway.py  test_keywords.py  test_logging_config.py  test_ports.py  test_sound_cues.py  test_transcription.py  test_tts.py  test_voice_detector.py
